# bpg

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml  test.yml
src/: cli.rs  lib.rs  main.rs  process.rs
tests/: process_local.rs
