[package]
name = "bpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
image = "0.24.7"
num = "0.4.1"
once_cell = "1.19.0"
rayon = "1.8.0"

[dev-dependencies]
rstest = "0.18.2"
